# dynobj

./: CMakeLists.txt  README.md
include/dynobj/: callback.h  context.h  log.h  log_level.h  object.h  object_host.h  ref_counter.h
private/: CMakeLists.txt
private/modules/: CMakeLists.txt
private/modules/dynobj_host/: CMakeLists.txt  object_host_impl.cpp  object_loader_win32.cpp
private/modules/dynobj_host/tests/: dynobj_host_tests.cmake  object_host_test.cpp
